@@ -2,4 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>java</herd>
+	<upstream>
+		<remote-id type="google-code">mockito</remote-id>
+	</upstream>
 </pkgmetadata>
